--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,8 +1,8 @@
 FROM python:3.12-slim
 
 WORKDIR /app
-COPY main.py /app/
+COPY . /app/
 
-RUN pip install --no-cache-dir fastapi uvicorn
+RUN pip install --no-cache-dir fastapi uvicorn jinja2
 
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "80"]
